k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: chpasswd
  name: chpasswd
spec:
  host: chpasswd.app.tre-ms.jus.br
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: chpasswd
    weight: 100
